2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>

	Rename back nslices to nslis.

	* mln/core/image/image3d.hh,
	* mln/core/internal/box_impl.hh,
	* mln/core/site_set/box.hh,
	* mln/debug/slices_2d.hh,
	* mln/geom/all.hh,
	* mln/geom/size3d.hh,
	* mln/linear/gaussian.hh,
	* mln/linear/gaussian/impl.hh,
	* mln/make/box3d.hh,
	* mln/make/image.hh,
	* mln/make/image3d.hh,
	* mln/registration/icp.hh,
	* tests/core/alias/box3d.cc,
	* tests/core/image/image3d.cc,
	* tests/geom/Makefile.am,
	* tests/io/pbms/load.cc,
	* tests/io/pgms/load.cc,
	* tests/io/ppms/load.cc: Rename nslices to nslis.

	* mln/geom/nslices.hh,
	* tests/geom/nslices.cc: Rename as...

	* mln/geom/nslis.hh,
	* tests/geom/nslis.cc: ...this.

2011-08-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/figures/ima2d-rot-2.ppm: Regen.

2011-08-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix tests.

	* tests/labeling/blobs_and_compute.cc,
	* tests/morpho/skeleton_constrained.cc: Here.

2011-08-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix genericity in skeleton computation.

	* mln/morpho/skeleton_constrained.hh,
	* mln/topo/skeleton/is_simple_point.hh: Expect a double
	neighborhood.

	* mln/topo/is_simple_2d.hh: Add a fast implementation.

2011-08-08  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes.

	* mln/core/point.hh: Fix point1d conversion.

	* mln/debug/draw_graph.hh: Don't write outside output image.

	* mln/win/multiple_size.hh: Avoid a warning.

2011-08-05  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/util/timer.hh: Add support for milliseconds output.

2011-06-28  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/morpho/skeleton_constrained.hh: Add a missing include.

2011-06-28  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/border/equalize.hh: Fix an invalid assertion.

2011-06-27  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/debug/draw_graph.hh: Limit the use of exact().

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/draw/polygon.hh: New.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>
