@@ -1,4 +1,5 @@
-// Copyright (C) 2007, 2008, 2009 EPITA Research and Development Laboratory (LRDE)
+// Copyright (C) 2007, 2008, 2009, 2011 EPITA Research and Development
+// Laboratory (LRDE)
 //
 // This file is part of Olena.
 //
@@ -192,6 +193,9 @@ namespace mln
 
     /// Give the bounding box domain.
     const box1d& bbox() const;
+
+    /// virtual box, i.e., box including the virtual border
+    const box1d& vbbox() const;
 
     /// Give the border thickness.
     unsigned border() const;
@@ -408,6 +412,15 @@ namespace mln
   {
     mln_precondition(this->is_valid());
     return this->data_->b_;
+  }
+
+  template <typename T>
+  inline
+  const box1d&
+  image1d<T>::vbbox() const
+  {
+    mln_precondition(this->is_valid());
+    return this->data_->vb_;
   }
 
   template <typename T>
